@@ -66,9 +66,9 @@ class ToMayaMeshConverter : public ToMayaObjectConverter
 		static Description g_meshDescription;
 
 	private:
-
+		
 		void assignDefaultShadingGroup( MObject &shape ) const;
-		void addUVSet( MFnMesh &fnMesh, const MIntArray &polygonCounts, IECore::ConstMeshPrimitivePtr mesh, const std::string &sPrimVarName, const std::string &tPrimVarName, MString *uvSetName = 0 ) const;
+		void addUVSet( MFnMesh &fnMesh, const MIntArray &polygonCounts, IECore::ConstMeshPrimitivePtr mesh, const std::string &sPrimVarName, const std::string &tPrimVarName, const std::string &stIdPrimVarName, MString *uvSetName = 0 ) const;
 
 };
 
